--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "feel_fit",
   "version": "0.1.0",
-  "homepage": "https://jarekm04.github.io/feel_fit",
+  "homepage": "https://jarekm04.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
